# amadeus-cli

./: .ccls  .clang-format  .cursorrules  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  PROJECT.md  README.md  TODO.md  compile_commands.json  demo.cpp  flake.nix  justfile  sonar-project.properties
.cursor/rules/: main.mdc
.github/workflows/: build.yml
cmake/: GitVersion.cmake  Version.h.in
data/: employees.json  employees.xml
include/amadeus/: CliOptions.hpp  Constants.hpp  Employee.hpp
include/amadeus/data_handlers/: DataHandler.hpp  JsonDataHandler.hpp  XmlDataHandler.hpp
src/: CMakeLists.txt  main.cpp
src/data_handlers/: DataHandler.cpp  JsonDataHandler.cpp  XmlDataHandler.cpp
test/: CMakeLists.txt  cli_test.cpp
utils/: data-generator.js
